Linked sign_up.html and sign_in.html with index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#">Progress</a>
                 <a href="#">Contact Us</a>
                 <div class="register">
-                    <a href="#">Sign Up</a> <a>/</a> <a href="#">Sign In</a>
+                    <a href="./sign_up.html">Sign Up</a> <a>/</a> <a href="./sign_in.html">Sign In</a>
                 </div>
             </nav>
         </header>
